<resources>
    <string name="app_name">FestivalTimeProject</string>
    <string name="search_title">search</string>
    <string name="search_hint">어떤 축제를 즐겨볼까요?</string>
    <string name="HotFestival">HOT! 한 축제</string>
    <string name="vacation_festival">축제와 함께 하는 휴가!</string>
    <string name="today_festival">지금 진행중인 축제</string>
    <string name="festival_title">title</string>
    <string name="vacation_recommend">추천 축제</string>

    <string name="culture_festival">문화관광축제</string>
    <string name="normal_festival">일반축제</string>

    <string name="traditional">전통공연</string>
    <string name="act">연극</string>
    <string name="musical">뮤지컬</string>
    <string name="exhibition">전시회</string>
    <string name="etc">기타행사</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>

    <!-- Map API-->
    <string name="rest_api_key">117e462c5fa40e0dc33af107ca087840</string>

    <!-- 상세 설정 팝업 string -->
    <string name="detail_setting">상세 설정</string>
    <string name="festival_category">축제 분류</string>
    <string name="concert">공연/행사</string>
    <string name="everycategory">모든 카테고리</string>
    <string name="completed">종료됨</string>
    <string name="Ongoing">진행중</string>
    <string name="Upgoing">진행예정</string>
    <string name="festival_state">축제 상태</string>
    <string name="null_text">홈페이지를 통해 확인해주세요.</string>
    <string name="event">공연/행사</string>


    <string name="location">지역</string>
    <string name="every_location">모든 지역</string>
    <string name="location_select">지역 선택</string>

    <string name="seoul">서울</string>
    <string name="gyeonggi">경기</string>
    <string name="incheon">인천</string>
    <string name="gangwon">강원</string>
    <string name="jeju">제주</string>

    <string name="daejeon">대전</string>
    <string name="chungbuk">충북</string>
    <string name="chungnam_sejong">충남/세종</string>
    <string name="busan">부산</string>
    <string name="ulsan">울산</string>
    <string name="gyeongnam">경남</string>

    <string name="daegu">대구</string>
    <string name="gyeongbuk">경북</string>
    <string name="gwangju">광주</string>
    <string name="jeonnam">전남</string>
    <string name="jeonju_jeonbuk">전주/전북</string>

    <string name="date">기간</string>
    <string name="month_select">월별</string>

    <!--캘린더 string-->
    <string name="festival">축제</string>
    <string name="vacation">휴가</string>
    <string name="cheerup_text">오늘도 화이팅!</string>
    <string name="cal_setting">캘린더 설정</string>
    <string name="add_button">추가하기</string>
    <string name="finish">완료</string>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <!--캘린더 팝업 string-->
    <string name="short_add">추가</string>
    <string name="dismiss_popup">X</string>
    <string name="del_list">삭제</string>
    <string name="edit">편집</string>
    <string name="none">없음</string>
    <string name="close">닫기</string>
    <string name="add_day">일정 추가</string>
    <string name="title_kr">제목</string>
    <string name="all_day">하루종일</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="default_date">DATE</string>
    <string name="default_time">00:00</string>
    <string name="category">카테고리</string>

    <string name="select_day_view">선택 보기</string>
    <string name="last_month">지난 달</string>
    <string name="other_months">다른 달</string>

    <!--카테고리 추가 팝업 string-->
    <string name="color">색상</string>
    <string name="input_title">제목을 입력하는 란</string>

    <!--축제 캘린더 string-->
    <string name="festi_cal">축제 캘린더</string>
    <string name="normal_cal">개인 캘린더</string>

    <!--마이페이지 string-->
    <string name="my_page">마이페이지</string>
    <string name="my_badge">MY 뱃지</string>
    <string name="nickname">NICKNAME</string>
    <string name="my_id">ID:#ad36f5</string>
    <string name="personal_information">계정 설정/로그인</string>
    <string name="password_change">비밀번호 변경</string>
    <string name="setting">설정</string>
    <string name="privacy_security">개인정보 보호 및 보호</string>
    <string name="app_information">앱 정보</string>
    <string name="developer_contact">개발자 문의</string>

    <!--마이 뱃지 string-->
    <string name="holding_badge">보유 뱃지</string>
    <string name="upload_badge">뱃지 만들기</string>
    <string name="title">title</string>
    <string name="version">1.0.0</string>
    <string name="api_key">xLV6ByAGjdurVThsvWr9wCsU/w+jaSsnixgt7qRjzfPgP3WfH69rN/Ws3BkIUuk+v7fTs3vqFPQcvsHBHwFH4w==</string>
    <string name="holiday_key">xLV6ByAGjdurVThsvWr9wCsU/w+jaSsnixgt7qRjzfPgP3WfH69rN/Ws3BkIUuk+v7fTs3vqFPQcvsHBHwFH4w==</string>

    <string name="title_activity_settings">settings</string>
    <!--설정-->
    <string name="AppSetting">설정</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="alarm_push">앱 푸쉬 알림받기</string>
    <string name="alarm_calender">캘린더 디데이에 따른 알림</string>
    <string name="search_autosave">최근 검색 자동 저장</string>
    <string name="search_autosave_explain">검색창에서 최근에 검색한 내역을 보여줍니다</string>

    <!--비밀번호 변경-->
    <string name="changePassword">비밀번호 변경</string>
    <string name="currentPW">현재 비밀번호</string>
    <string name="changePW">비밀번호 변경</string>
    <string name="checkPW">비밀번호 확인</string>
    <string name="savePW">저장</string>

    <!--문의하기 페이지 string-->
    <string name="inquiry">문의하기</string>
    <string name="write">글쓰기</string>
    <string name="writer_name">작성자 :</string>
    <string name="write_time">2023-00-00</string>
    <string name="submit">제출하기</string>

    <!--축제 검색후 페이지-->
    <string name="search_festival">축제</string>
    <string name="search_showAll">전체보기</string>
    <string name="proceed_show">종료제외 보기</string>

    <!--축제 전체보기-->
    <string name="address">주소</string>
    <string name="summary">개요</string>
    <string name="period">기간:</string>
    <string name="homepageaddr">홈페이지</string>
    <string name="festival_review">리뷰</string>

    <!--개인정보-->
    <string name="privacy">개인정보</string>
    <string name="login">로그인</string>

    <string name="login_message">로그인 후에 이용 가능합니다.</string>


    <string name="favorite_event">찜</string>
    />


</resources>