<!-- dialog_popup.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_style"
    android:layout_margin="5dp">

    <!-- 타이틀바 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 닫기 버튼 -->
        <Button
            android:id="@+id/dialog_popup_close_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="mOnClose"
            android:padding="16dp"
            android:text="@string/dismiss_popup"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/detail_setting"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/dialog_popup_add_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/short_add"
            android:textColor="@color/selected_color"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:background="#CFCFCF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:gravity="center|center"
                        android:text="@string/festival_state"
                        android:textSize="14sp" />



                    <ToggleButton
                        android:id="@+id/completed"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:checked="false"
                        android:background="@android:color/transparent"
                        android:textColor="@drawable/toggle_background"
                        android:gravity="center|center"
                        android:textOff="@string/completed"
                        android:textOn="@string/completed"
                        android:textSize="13sp" />

                    <ToggleButton
                        android:id="@+id/Ongoing"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:checked="false"
                        android:background="@android:color/transparent"
                        android:textColor="@drawable/toggle_background"
                        android:gravity="center|center"
                        android:textOff="@string/Ongoing"
                        android:textOn="@string/Ongoing"
                        android:textSize="13sp" />

                    <ToggleButton
                        android:id="@+id/Upgoing"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:checked="false"
                        android:background="@android:color/transparent"
                        android:textColor="@drawable/toggle_background"
                        android:gravity="center|center"
                        android:textOff="@string/Upgoing"
                        android:textOn="@string/Upgoing"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3px"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#CFCFCF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center|center"
                        android:textColor="@color/black"
                        android:text="@string/location"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000" />

                    <Button
                        android:id="@+id/dialog_popup_location"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="4"
                        android:textColor="@color/dark_gray"
                        android:background="@drawable/button_style"
                        android:gravity="center|center"
                        android:text="@string/location_select"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#CFCFCF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:gravity="center|center"
                android:text="@string/date"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center"
                android:text="@string/start"
                android:textColor="@color/darker_gray"
                android:textSize="13sp" />

            <Button
                android:id="@+id/dialog_popup_start_date"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:gravity="center|center"
                android:textColor="@color/dark_gray"
                android:background="@drawable/button_style"
                android:text="@string/default_date"
                android:textSize="13sp" />

            <Button
                android:id="@+id/dialog_popup_start_time"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1.5"
                android:gravity="center|center"
                android:background="@drawable/button_style"
                android:textColor="@color/dark_gray"
                android:text="@string/default_time"
                android:textSize="13sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="right"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/dialog_popup_StartDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="right"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/dialog_popup_StartTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:timePickerMode="spinner"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center"
                android:textColor="@color/darker_gray"
                android:text="@string/end"
                android:textSize="13sp" />

            <Button
                android:id="@+id/dialog_popup_end_date"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:textColor="@color/dark_gray"
                android:gravity="center|center"
                android:background="@drawable/button_style"
                android:text="@string/default_date"
                android:textSize="13sp" />

            <Button
                android:id="@+id/dialog_popup_end_time"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1.5"
                android:gravity="center|center"
                android:textColor="@color/dark_gray"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_style"
                android:text="@string/default_time"
                android:textSize="13sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="right"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/dialog_popup_EndDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="right"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/dialog_popup_EndTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:timePickerMode="spinner"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>


