<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/popup_roundcorner"
    android:orientation="vertical">

    <!-- 타이틀바 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 닫기 버튼 -->
        <Button
            android:id="@+id/addcalendar_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="mOnClose"
            android:padding="16dp"
            android:text="@string/dismiss_popup"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/add_day"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <!-- 일정 추가 버튼 -->
        <Button
            android:id="@+id/addcalendar_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="mOnClose"
            android:text="@string/short_add"
            android:textColor="@color/selected_color"
            android:textSize="10sp" />

    </LinearLayout>


    <!-- 일정 제목 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- 일정 시간대 설정란 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/ic_cal_roundbox">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="3dp"
                    android:gravity="left|center"
                    android:text="@string/start"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/addcalendar_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="#00ff0000"
                    android:gravity="right|center"
                    android:text="@string/default_date"
                    android:textSize="13sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="right"
                android:orientation="vertical">

                <DatePicker
                    android:id="@+id/addcalendar_StartDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_cal_roundbox">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="3dp"
                    android:gravity="left|center"
                    android:text="@string/end"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/addcalendar_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="#00ff0000"
                    android:gravity="right|center"
                    android:text="@string/default_date"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="right"
                android:orientation="vertical">

                <DatePicker
                    android:id="@+id/addcalendar_EndDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>