<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <!-- 타이틀바 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/cal_setting"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!-- 일정 추가 버튼 -->
        <Button
            android:id="@+id/add_finish_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="mOnClose"
            android:padding="16dp"
            android:text="@string/finish"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="left|center"
                android:text="@string/select_day_view"
                android:textSize="13sp" />

            <Button
                android:id="@+id/add_category"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#00000000"
                android:gravity="right|center"
                android:text="@string/add_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_cal_roundbox"
            android:orientation="horizontal">

            <!--대충 요런식.. -->
            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="left|center"
                android:text="@string/festival"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/ic_cal_category" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/ic_cal_roundbox">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/lastmonth_check"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/last_month"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:gravity="left|center"
                    android:text="@string/last_month"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/nextmonth_check"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/next_month"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:gravity="left|center"
                    android:text="@string/next_month"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>